XAP-55: Allow to retrieve messages sent and received
  * Introduce new DB fields for targeted users and authors of activities
  * Introduce new API to compute easily the targeted users even outside
    the handlers
  * Extract computation of relative/absolute URI for AP and use it
    everywhere it's needed (including for storage ID)